--- a/schooldriving-app/src/assets/skeleton.css
+++ b/schooldriving-app/src/assets/skeleton.css
@@ -26,15 +26,6 @@
   box-sizing: border-box;
 }
 
-.container-fluid {
-  position: relative;
-  width: 100%;
-  max-width: 1600px;
-  margin: 0 auto;
-  padding: 0 20px;
-  box-sizing: border-box;
-}
-
 .column,
 .columns {
   width: 100%;
@@ -44,8 +35,7 @@
 
 /* For devices larger than 400px */
 @media (min-width: 400px) {
-  .container,
-  .container-fluid {
+  .container {
     width: 85%;
     padding: 0;
   }
@@ -53,8 +43,7 @@
 
 /* For devices larger than 550px */
 @media (min-width: 550px) {
-  .container,
-  .container-fluid {
+  .container {
     width: 80%;
   }
   .column,
