--- a/schooldriving-app/src/assets/main.scss
+++ b/schooldriving-app/src/assets/main.scss
@@ -163,3 +163,20 @@ code {
 .main-container {
   margin-left: 200px;
 }
+
+.invalid-border {
+  border: 1px solid red !important;
+}
+
+// input[type="time"]::-webkit-calendar-picker-indicator {
+//   background: transparent;
+//   bottom: 0;
+//   color: transparent;
+//   cursor: pointer;
+//   height: auto;
+//   left: 0;
+//   position: absolute;
+//   right: 0;
+//   top: 0;
+//   width: auto;
+// }
